--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ body{
 
 /*///////FOOTER////////*/
 .footer{
-    background-color: #b5b5b5;
+    background-color: #A51D21;
     color: #000;
     height: auto;
 }
