about section made

--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,19 @@ body{
     font-size: 16px;
     font-weight: 400;
     line-height: 1.3;
+    height: 100%; /* Высота страницы равна высоте окна */
+    margin: 0; /* Убираем отступы */
+    display: flex;
+    flex-direction: column; /* Вертикальная структура */
 }
 
+.main{
+    flex: 1; /* Растягиваем основной контент */
+    width: 100%;
+    height: auto;
+    overflow-y: auto;
+    flex-grow: 1;
+}
 /*///////HEADER////////*/
 .header{
     background-color: #151515;
@@ -72,6 +83,11 @@ body{
     padding: 15px;
 }
 
+.logo__inner{
+    height: 60px;
+    width: 230px;
+}
+
 .header__part{
     flex: 1 1 auto; /* Позволяет элементам занимать доступное пространство */
     text-align: center; /* Центрируем текст в кнопках */
@@ -88,7 +104,7 @@ body{
     color: #fff;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .menu__list-link:hover{
@@ -100,7 +116,7 @@ body{
     color: #0066ff;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 24px; 
+    font-size: 18px; 
 }
 
 .menu__list-link--active:hover{
@@ -145,6 +161,7 @@ body{
     background-color: #b5b5b5;
     color: #000;
     height: auto;
+    width: 100%;
 }
 
 .footer__inner{
@@ -186,9 +203,6 @@ body{
 }
 
 /*///////////////*/
-.main{
-    flex-grow: 1;
-}
 
 .focus{
     background-image: url('../images/main_bck.jpg');
@@ -283,7 +297,7 @@ body{
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
 }
 
-.bx{
+.feature_bx{
     font-size: 50px;
     background-color: #A51D21;
     padding: 3px;
@@ -345,32 +359,46 @@ body{
 
 /*КОНТАКТЫ*/
 
+.wrapper.cont{
+    display: flex;
+    flex-direction: column; /* Строим макет вертикально */
+    height: 100vh; /* Высота страницы на весь экран */
+    margin: 0;
+}
+
 .main_cont{
-    position: relative; /* Родительский контейнер для абсолютного позиционирования */
-    
+    flex: 1; /* Занимает всё доступное пространство между хедером и футером */
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    height: 100%;
 }
 /*SWIPER*/
 
 .swiper{
-    position: relative; /* Оставляем swiper базовым контейнером */
-    z-index: 1; /* Устанавливаем фоновый уровень */
+    flex: 1; /* Занимает всё доступное пространство внутри .main_cont */
+    position: relative;
+    z-index: 1;
+    width: 100%;
 }
+
+
 .swiper::after{
     content: '';
-    background: rgba(21,21,21,.3);
+    background: rgba(21, 21, 21, 0.3); /* Полупрозрачный слой */
     position: absolute;
     z-index: 5;
-    left: 0;
-    right: 0;
     top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .swiper-slide{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    height: 100%; /* Свайпер растягивается на высоту родительского контейнера */
 }
 
 /*////////////////////*/
@@ -386,7 +414,7 @@ body{
     align-items: center; /* Центрируем текст по горизонтали */
     max-width: 590px;
     max-height: auto;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(255, 255, 255, 0.3);
     border: 2px solid rgb(255, 255, 255, .2);
     backdrop-filter:blur(30px);
     box-shadow: 0 0 10px rgba(0,0,0, .2);
@@ -495,3 +523,122 @@ body{
 .main.blog{
     background-image: url('../Login/i1.jpg');
 }
+
+/*ABOUT*/
+
+.wrapper.about{
+    overflow: auto;
+    background-image: url('../images/about_back.jpg');
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+    width: 100%;
+}
+
+.about_content{
+    display: flex;
+    margin-top: 150px;
+    width: 100%;
+    justify-content: center;
+}
+
+.Mission{
+    margin: 10px;
+    width: 65%;
+}
+
+.team{
+    margin: 10px;
+    width: 35%;
+}
+
+._cover{
+    display: flex; /* Для стилизации контента */
+    flex-direction: column; /* Контент в столбик */
+    align-items: center; /* Центрируем текст по горизонтали */
+    max-height: auto;
+    background: rgba(255, 255, 255, 0.3);
+    border: 2px solid rgb(255, 255, 255, .2);
+    backdrop-filter:blur(30px);
+    box-shadow: 0 0 10px rgba(0,0,0, .2);
+    color: #000;
+    border-radius: 10px;
+    margin-bottom: 24px;
+}
+
+.mission_title{
+    font-size: 30px;
+    font-weight: 500;
+    padding: 15px;
+}
+
+.mission_text{
+    font-size: 18px;
+    font-weight: 400;
+    padding: 25px;
+}
+
+.team_title{
+    font-size: 30px;
+    font-weight: 500;
+    padding: 15px;
+}
+
+.member{
+    display: flex; /* Устанавливаем Flexbox */
+    align-items: center; /* Центрируем элементы по вертикали */
+    flex-direction: row; /* Располагаем элементы горизонтально */
+}
+
+.member_name{
+    font-size: 20px;
+    font-weight: 700;
+    padding-bottom: 8px;
+}
+
+.member_icon{
+    flex-shrink: 0; /* Предотвращаем уменьшение изображения */
+    display: flex;
+    height: 170px;
+    width: 170px;
+    margin: 24px;
+    border-radius: 8px;
+
+}
+
+.member_info_txt{
+    flex: 1 1 auto; /* Элемент занимает доступное пространство, но может переноситься */
+    display: flex;
+    flex-direction: column; /* Содержимое внутри элемента идёт вертикально */
+    justify-content: center; /* Центрируем текст */
+    align-items: flex-start; /* Выравниваем текст по левому краю */
+}
+
+.member_info{
+    font-size: 16px;
+    font-weight: 400;
+    padding-bottom: 8px;
+}
+
+.member_link_item{
+    display: flex;
+    height: 100%;
+    width: 100%;
+}
+
+.member_link_icn{
+    padding: 0;
+    margin: 0;
+    height: 30px;
+    width: 30px;
+    color: #0077B5;
+    font-size: 30px;
+    text-align: center;
+    background-color: #A51D21;
+    border-radius: 10px;
+}
+
+/*////////////////////////*/
