--- a/css/style.css
+++ b/css/style.css
@@ -381,7 +381,8 @@ body{
 
 .swiper{
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
+    height: auto; 
 }
 
 
@@ -400,7 +401,6 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 100%;
 }
 
 /*////////////////////*/
