--- a/css/style.css
+++ b/css/style.css
@@ -51,27 +51,30 @@ body{
     flex-direction: column; /* Вертикальная структура */
 }
 
-.main{
-    flex: 1; /* Растягиваем основной контент */
+.main {
+    margin-top: 60px; /* Учитываем высоту хедера, чтобы контент не находился под ним */
+    flex: 1;
     width: 100%;
     height: auto;
     overflow-y: auto;
-    flex-grow: 1;
 }
 /*///////HEADER////////*/
 .header{
     background-color: #151515;
 }
 
-.header-main{
-   background-color: rgba(255, 255, 255, .2);
-   backdrop-filter:blur(20px);
-   position: absolute;
-   left: 0;
-   right: 0;
-   top: 0; /* Начало от верхнего края */
-   z-index: 10; /* Устанавливаем уровень слоя */
-   width: 100%; /* Ширина на всю страницу */
+/* HEADER */
+.header-main {
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(20px);
+    position: fixed; /* Меняем на fixed */
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10; /* Хедер остаётся выше всего */
+    width: 100%;
+    height: auto; /* Позволяет адаптироваться по высоте */
+    padding: 15px 0; /* Добавляем отступы для удобства */
 }
 
 .header__inner{
